# mcu-training

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: question.md  task.md
capstone/: README.md
capstone/hair-clipper/: README.md
docs/: setup-guide.md  syllabus.md
hardware/: parts-list.md
weeks/week1-toolchain/: TASKS.md
weeks/week1-toolchain/week1-blink/: NuMicro_M0_Family.yaml  main.c
weeks/week1-toolchain/week1-blink/VSCode/: .clangd  Template.Release+ARMCLANG.cbuild.yml  Template.cbuild-idx.yml  Template.cbuild-pack.yml  Template.cbuild-set.yml  Template.cproject.yml  Template.csolution.yml
weeks/week1-toolchain/week1-blink/VSCode/RTE/Device/M031SD2AE/: regions_M031SD2AE.h
weeks/week1-toolchain/week1-blink/VSCode/RTE/Device/M032SE3AE/: regions_M032SE3AE.h
weeks/week1-toolchain/week1-blink/VSCode/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
weeks/week1-toolchain/week1-blink/VSCode/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake  compile_commands.json
weeks/week1-toolchain/week1-blink/VSCode/tmp/Template.Release+ARMCLANG/: CMakeLists.txt  groups.cmake  toolchain.cmake
weeks/week1-toolchain/week1-blink/VSCode/tmp/Template.Release+ARMCLANG/src/Template.Release+ARMCLANG-stamp/: Template.Release+ARMCLANG-configure-.cmake  Template.Release+ARMCLANG-database-.cmake  Template.Release+ARMCLANG-source_dirinfo.txt
weeks/week1-toolchain/week1-blink/VSCode/tmp/Template.Release+ARMCLANG/tmp/: Template.Release+ARMCLANG-cfgcmd.txt  Template.Release+ARMCLANG-mkdirs.cmake
weeks/week2-gpio/: TASKS.md
weeks/week3-uart/: TASKS.md
weeks/week4-timers-pwm/: TASKS.md
weeks/week5-interrupts/: TASKS.md
weeks/week6-adc/: TASKS.md
weeks/week7-i2c-spi/: TASKS.md
weeks/week8-capstone/: TASKS.md
